feat: Updated Gulp (4.0.2)

--- a/source/template/sass/base/base.scss
+++ b/source/template/sass/base/base.scss
@@ -1,10 +1,10 @@
-// Project: Frontend Builder (Wordpress version)
-// Project URI: https://github.com/Xgraf/frontend-builder-wordpress
+// Project: Gulp Starter (Wordpress version)
+// Project URI: https://github.com/GrafSoul/gulp-starter-wordpress
 // Version: 1.0
 // Tags: gulp, html, css, js, sass
-// Description: Frontend Builder (Wordpress version) - Project builder for web development.
+// Description: Gulp Starter (Wordpress version) - Project builder for web development.
 // Author: Dmitriy Zatulovskiy
-// Author URI: https://github.com/Xgraf , http://networkroom.ru
+// Author URI: https://github.com/GrafSoul , http://networkroom.ru
 
 /* ==========================================================================
    Base Rules
@@ -14,52 +14,39 @@ html {}
 
 body {}
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {}
 
-}
+h1 {}
 
-h1 {
+h2 {}
 
-}
+h3 {}
 
-h2 {
+h4 {}
 
-}
+h5 {}
 
-h3 {
+h6 {}
 
-}
-
-h4 {
-
-}
-
-h5 {
-
-}
-
-h6 {
-
-}
-
-p {
-
-}
+p {}
 
 a {
 
-    &:hover {
-
-    }
+   &:hover {}
 }
 
 /* ClearFix
    ========================================================================== */
 
 .clearfix {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
+   content: ".";
+   display: block;
+   height: 0;
+   clear: both;
+   visibility: hidden;
 }
