--- a/source/template/sass/layout/grid.scss
+++ b/source/template/sass/layout/grid.scss
@@ -1,10 +1,10 @@
-// Project: The Wordpressor (SMACSS + JADE + SASS + POSTCSS)
-// Project URI: https://github.com/Xgraf/wordpressor-jade-sass-postcss.git
+// Project: Gulp Starter (Wordpress version)
+// Project URI: https://github.com/GrafSoul/gulp-starter-wordpress
 // Version: 1.0
-// Tags: wordpress, gulp, html, php, css, js, jade, sass, postcss, sftp, ftp
-// Description: Multi-purpose and configurable wordpress theme collector
+// Tags: gulp, html, css, js, sass
+// Description: Gulp Starter (Wordpress version) - Project builder for web development.
 // Author: Dmitriy Zatulovskiy
-// Author URI: https://github.com/Xgraf
+// Author URI: https://github.com/GrafSoul , http://networkroom.ru
 
 // ========================================================================================
 // Grid
@@ -13,27 +13,43 @@
 @mixin container {
 	@include ml(-$grid-gutter-width);
 	@include pl($grid-margin-width);
-	@include pr($grid-margin-width);}
-	@mixin grid-columns($grid-column-span, $grid-total-columns) {
-	@include w(percentage($grid-column-span/$grid-total-columns));}
-$class-grid-row:	'row';
-$class-grid-column:	'col-';
-$class-push:		'push';
-@mixin generate_grid_classes(){
-	.#{$class-grid-row}{@include container();}
+	@include pr($grid-margin-width);
+}
+
+@mixin grid-columns($grid-column-span, $grid-total-columns) {
+	@include w(percentage($grid-column-span/$grid-total-columns));
+}
+
+$class-grid-row: 'row';
+$class-grid-column: 'col-';
+$class-push: 'push';
+
+@mixin generate_grid_classes() {
+	.#{$class-grid-row} {
+		@include container();
+	}
+
 	[class*="#{$class-grid-column}"] {
-	@include pos(relative);
-	@include  minh(1);
-	@include bs(border-box);
-	@include  pl($grid-gutter-width);
-	@include  w_p(100);
-	@include  fll;}  
+		@include pos(relative);
+		@include minh(1);
+		@include bs(border-box);
+		@include pl($grid-gutter-width);
+		@include w_p(100);
+		@include fll;
+	}
+
 	[class*="#{$class-grid-column}"]:last-child {
-	@include  fll;}}
-@mixin generate_grid_column_classes($class-grid-column){
-	@for $i from 1 through $grid-total-columns{
-	.#{$class-grid-column}#{$i} {
-	@include grid-columns($i, $grid-total-columns);}}}
+		@include fll;
+	}
+}
+
+@mixin generate_grid_column_classes($class-grid-column) {
+	@for $i from 1 through $grid-total-columns {
+		.#{$class-grid-column}#{$i} {
+			@include grid-columns($i, $grid-total-columns);
+		}
+	}
+}
 
 //
 //On and Off Grid (add or dell - //)
