--- a/source/template/sass/module/menu.scss
+++ b/source/template/sass/module/menu.scss
@@ -1,10 +1,10 @@
-// Project: The Wordpressor (SMACSS + JADE + SASS + POSTCSS)
-// Project URI: https://github.com/Xgraf/wordpressor-jade-sass-postcss.git
+// Project: Gulp Starter (Wordpress version)
+// Project URI: https://github.com/GrafSoul/gulp-starter-wordpress
 // Version: 1.0
-// Tags: wordpress, gulp, html, php, css, js, jade, sass, postcss, sftp, ftp
-// Description: Multi-purpose and configurable wordpress theme collector
+// Tags: gulp, html, css, js, sass
+// Description: Gulp Starter (Wordpress version) - Project builder for web development.
 // Author: Dmitriy Zatulovskiy
-// Author URI: https://github.com/Xgraf
+// Author URI: https://github.com/GrafSoul , http://networkroom.ru
 
 /* ==========================================================================
    Menu Rules
@@ -13,22 +13,16 @@
 /*
    Main Menu Rules
    ========================================================================== */
-.main-menu {
-    
-}
+.main-menu {}
 
 /*
    Social Menu Rules
    ========================================================================== */
 .social-menu {
-	
-	.twitter {
-		
-	}
-	.facebook {
-		
-	}
-	.instagram {
-		
-	}
+
+   .twitter {}
+
+   .facebook {}
+
+   .instagram {}
 }
