--- a/source/template/sass/base/fonts.scss
+++ b/source/template/sass/base/fonts.scss
@@ -1,10 +1,10 @@
-// Project: Frontend Builder (Wordpress version)
-// Project URI: https://github.com/Xgraf/frontend-builder-wordpress
+// Project: Gulp Starter (Wordpress version)
+// Project URI: https://github.com/GrafSoul/gulp-starter-wordpress
 // Version: 1.0
 // Tags: gulp, html, css, js, sass
-// Description: Frontend Builder (Wordpress version) - Project builder for web development.
+// Description: Gulp Starter (Wordpress version) - Project builder for web development.
 // Author: Dmitriy Zatulovskiy
-// Author URI: https://github.com/Xgraf , http://networkroom.ru
+// Author URI: https://github.com/GrafSoul , http://networkroom.ru
 
 /* ==========================================================================
    Fonts Rules
@@ -14,43 +14,46 @@
 	font-family:#{$font};
 	src: url('#{$font-url}roboto.eot');
 	src: url('#{$font-url}roboto.eot?#iefix') format('embedded-opentype'),
-		url('#{$font-url}roboto.woff2') format('woff2'),
-		url('#{$font-url}roboto.woff') format('woff'),
-		url('#{$font-url}roboto.ttf') format('truetype'),
-		url('#{$font-url}roboto.svg##{$font}') format('svg');
+	url('#{$font-url}roboto.woff2') format('woff2'),
+	url('#{$font-url}roboto.woff') format('woff'),
+	url('#{$font-url}roboto.ttf') format('truetype'),
+	url('#{$font-url}roboto.svg##{$font}') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
+
 @font-face {
 	font-family:#{$font};
 	src: url('#{$font-url}robotobold.eot');
 	src: url('#{$font-url}robotobold.eot?#iefix') format('embedded-opentype'),
-		url('#{$font-url}robotobold.woff2') format('woff2'),
-		url('#{$font-url}robotobold.woff') format('woff'),
-		url('#{$font-url}robotobold.ttf') format('truetype'),
-		url('#{$font-url}robotobold.svg##{$font}bold') format('svg');
+	url('#{$font-url}robotobold.woff2') format('woff2'),
+	url('#{$font-url}robotobold.woff') format('woff'),
+	url('#{$font-url}robotobold.ttf') format('truetype'),
+	url('#{$font-url}robotobold.svg##{$font}bold') format('svg');
 	font-weight: bold;
 	font-style: normal;
 }
+
 @font-face {
 	font-family:#{$font};
 	src: url('#{$font-url}robotoitalic.eot');
 	src: url('#{$font-url}robotoitalic.eot?#iefix') format('embedded-opentype'),
-		url('#{$font-url}robotoitalic.woff2') format('woff2'),
-		url('#{$font-url}robotoitalic.woff') format('woff'),
-		url('#{$font-url}robotoitalic.ttf') format('truetype'),
-		url('#{$font-url}robotoitalic.svg##{$font}italic') format('svg');
+	url('#{$font-url}robotoitalic.woff2') format('woff2'),
+	url('#{$font-url}robotoitalic.woff') format('woff'),
+	url('#{$font-url}robotoitalic.ttf') format('truetype'),
+	url('#{$font-url}robotoitalic.svg##{$font}italic') format('svg');
 	font-weight: normal;
 	font-style: italic;
 }
+
 @font-face {
 	font-family:#{$font};
 	src: url('#{$font-url}robotobolditalic.eot');
 	src: url('#{$font-url}robotobolditalic.eot?#iefix') format('embedded-opentype'),
-		url('#{$font-url}robotobolditalic.woff2') format('woff2'),
-		url('#{$font-url}robotobolditalic.woff') format('woff'),
-		url('#{$font-url}robotobolditalic.ttf') format('truetype'),
-		url('#{$font-url}robotobolditalic.svg##{$font}bolditalic') format('svg');
+	url('#{$font-url}robotobolditalic.woff2') format('woff2'),
+	url('#{$font-url}robotobolditalic.woff') format('woff'),
+	url('#{$font-url}robotobolditalic.ttf') format('truetype'),
+	url('#{$font-url}robotobolditalic.svg##{$font}bolditalic') format('svg');
 	font-weight: bold;
 	font-style: italic;
 }
